--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/firebase": "^3.2.1",
+    "axios": "^1.7.3",
     "centrifuge": "^5.2.2",
     "cogo-toast": "^4.2.3",
     "email-validator": "^2.0.4",
+    "firebase": "^10.12.5",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
     "next": "14.2.5",
